// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDataGrid pagination renders 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiPopover euiPopover--anchorUpRight"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
          data-test-subj="tablePaginationPopoverButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
          >
            <span
              class="euiButtonContent__icon"
              color="inherit"
              data-euiicon-type="arrowDown"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Rows per page: 6
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <nav
      aria-label="Pagination for preceding grid: test grid"
      class="euiPagination"
    >
      <a
        aria-controls="generated-id"
        aria-label="Previous page, 1"
        class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
        data-test-subj="pagination-button-previous"
        href="#generated-id"
        rel="noreferrer"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowLeft"
        />
      </a>
      <ul
        aria-label="Pagination for preceding grid: test grid"
        class="euiPagination__list"
      >
        <li
          class="euiPagination__item"
        >
          <a
            aria-controls="generated-id"
            aria-label="Page 1 of 2"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiPaginationButton euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-0"
            href="#generated-id"
            rel="noreferrer"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                1
              </span>
            </span>
          </a>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-controls="generated-id"
            aria-current="true"
            aria-label="Page 2 of 2"
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
            data-test-subj="pagination-button-1"
            disabled=""
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                2
              </span>
            </span>
          </button>
        </li>
      </ul>
      <button
        aria-label="Next page"
        class="euiButtonIcon euiButtonIcon-isDisabled euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
        data-test-subj="pagination-button-next"
        disabled=""
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
        />
      </button>
    </nav>
  </div>
</div>
`;

exports[`EuiDataGrid render column actions renders various column actions configurations 1`] = `
<ul
  className="euiListGroup euiListGroup-maxWidthDefault"
  data-test-subj="dataGridHeaderCellActionGroup-B"
>
  <EuiListGroupItem
    color="text"
    iconType="eyeClosed"
    key="title-0"
    label={
      <EuiI18n
        default="Hide column"
        token="euiColumnActions.hideColumn"
      />
    }
    onClick={[Function]}
    showToolTip={false}
    size="xs"
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--xSmall euiListGroupItem--text euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          className="euiListGroupItem__icon"
          color="inherit"
          type="eyeClosed"
        >
          <span
            className="euiListGroupItem__icon"
            color="inherit"
            data-euiicon-type="eyeClosed"
          />
        </EuiIcon>
        <span
          className="euiListGroupItem__label"
          title="Hide column"
        >
          <EuiI18n
            default="Hide column"
            token="euiColumnActions.hideColumn"
          >
            Hide column
          </EuiI18n>
        </span>
      </button>
    </li>
  </EuiListGroupItem>
  <EuiListGroupItem
    className=""
    color="text"
    iconType="sortUp"
    isDisabled={false}
    key="title-1"
    label={
      <EuiI18n
        default="Sort {schemaLabel}"
        token="euiColumnActions.sort"
        values={
          Object {
            "schemaLabel": <EuiI18n
              default="A-Z"
              token="euiColumnSortingDraggable.defaultSortAsc"
            />,
          }
        }
      />
    }
    onClick={[Function]}
    showToolTip={false}
    size="xs"
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--xSmall euiListGroupItem--text euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          className="euiListGroupItem__icon"
          color="inherit"
          type="sortUp"
        >
          <span
            className="euiListGroupItem__icon"
            color="inherit"
            data-euiicon-type="sortUp"
          />
        </EuiIcon>
        <span
          className="euiListGroupItem__label"
          title="Sort A-Z"
        >
          <EuiI18n
            default="Sort {schemaLabel}"
            token="euiColumnActions.sort"
            values={
              Object {
                "schemaLabel": <EuiI18n
                  default="A-Z"
                  token="euiColumnSortingDraggable.defaultSortAsc"
                />,
              }
            }
          >
            <Component
              schemaLabel={
                <EuiI18n
                  default="A-Z"
                  token="euiColumnSortingDraggable.defaultSortAsc"
                />
              }
            >
              Sort 
              <EuiI18n
                default="A-Z"
                key="1"
                token="euiColumnSortingDraggable.defaultSortAsc"
              >
                A-Z
              </EuiI18n>
            </Component>
          </EuiI18n>
        </span>
      </button>
    </li>
  </EuiListGroupItem>
  <EuiListGroupItem
    className=""
    color="text"
    iconType="sortDown"
    isDisabled={false}
    key="title-2"
    label={
      <EuiI18n
        default="Sort {schemaLabel}"
        token="euiColumnActions.sort"
        values={
          Object {
            "schemaLabel": <EuiI18n
              default="Z-A"
              token="euiColumnSortingDraggable.defaultSortDesc"
            />,
          }
        }
      />
    }
    onClick={[Function]}
    showToolTip={false}
    size="xs"
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--xSmall euiListGroupItem--text euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          className="euiListGroupItem__icon"
          color="inherit"
          type="sortDown"
        >
          <span
            className="euiListGroupItem__icon"
            color="inherit"
            data-euiicon-type="sortDown"
          />
        </EuiIcon>
        <span
          className="euiListGroupItem__label"
          title="Sort Z-A"
        >
          <EuiI18n
            default="Sort {schemaLabel}"
            token="euiColumnActions.sort"
            values={
              Object {
                "schemaLabel": <EuiI18n
                  default="Z-A"
                  token="euiColumnSortingDraggable.defaultSortDesc"
                />,
              }
            }
          >
            <Component
              schemaLabel={
                <EuiI18n
                  default="Z-A"
                  token="euiColumnSortingDraggable.defaultSortDesc"
                />
              }
            >
              Sort 
              <EuiI18n
                default="Z-A"
                key="1"
                token="euiColumnSortingDraggable.defaultSortDesc"
              >
                Z-A
              </EuiI18n>
            </Component>
          </EuiI18n>
        </span>
      </button>
    </li>
  </EuiListGroupItem>
  <EuiListGroupItem
    color="text"
    iconType="sortLeft"
    isDisabled={false}
    key="title-3"
    label={
      <EuiI18n
        default="Move left"
        token="euiColumnActions.moveLeft"
      />
    }
    onClick={[Function]}
    showToolTip={false}
    size="xs"
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--xSmall euiListGroupItem--text euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          className="euiListGroupItem__icon"
          color="inherit"
          type="sortLeft"
        >
          <span
            className="euiListGroupItem__icon"
            color="inherit"
            data-euiicon-type="sortLeft"
          />
        </EuiIcon>
        <span
          className="euiListGroupItem__label"
          title="Move left"
        >
          <EuiI18n
            default="Move left"
            token="euiColumnActions.moveLeft"
          >
            Move left
          </EuiI18n>
        </span>
      </button>
    </li>
  </EuiListGroupItem>
  <EuiListGroupItem
    color="text"
    iconType="sortRight"
    isDisabled={false}
    key="title-4"
    label={
      <EuiI18n
        default="Move right"
        token="euiColumnActions.moveRight"
      />
    }
    onClick={[Function]}
    showToolTip={false}
    size="xs"
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--xSmall euiListGroupItem--text euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          className="euiListGroupItem__icon"
          color="inherit"
          type="sortRight"
        >
          <span
            className="euiListGroupItem__icon"
            color="inherit"
            data-euiicon-type="sortRight"
          />
        </EuiIcon>
        <span
          className="euiListGroupItem__label"
          title="Move right"
        >
          <EuiI18n
            default="Move right"
            token="euiColumnActions.moveRight"
          >
            Move right
          </EuiI18n>
        </span>
      </button>
    </li>
  </EuiListGroupItem>
</ul>
`;

exports[`EuiDataGrid render column actions renders various column actions configurations 2`] = `
<ul
  className="euiListGroup euiListGroup-maxWidthDefault"
  data-test-subj="dataGridHeaderCellActionGroup-C"
>
  <EuiListGroupItem
    key="title-0"
    label="test"
    onClick={[Function]}
    showToolTip={false}
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--medium euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiListGroupItem__label"
          title="test"
        >
          test
        </span>
      </button>
    </li>
  </EuiListGroupItem>
</ul>
`;

exports[`EuiDataGrid render column actions renders various column actions configurations 3`] = `
<ul
  className="euiListGroup euiListGroup-maxWidthDefault"
  data-test-subj="dataGridHeaderCellActionGroup-D"
>
  <EuiListGroupItem
    className=""
    color="text"
    iconType="sortUp"
    isDisabled={false}
    key="title-0"
    label={
      <EuiI18n
        default="Sort {schemaLabel}"
        token="euiColumnActions.sort"
        values={
          Object {
            "schemaLabel": <EuiI18n
              default="A-Z"
              token="euiColumnSortingDraggable.defaultSortAsc"
            />,
          }
        }
      />
    }
    onClick={[Function]}
    showToolTip={false}
    size="xs"
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--xSmall euiListGroupItem--text euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          className="euiListGroupItem__icon"
          color="inherit"
          type="sortUp"
        >
          <span
            className="euiListGroupItem__icon"
            color="inherit"
            data-euiicon-type="sortUp"
          />
        </EuiIcon>
        <span
          className="euiListGroupItem__label"
          title="Sort A-Z"
        >
          <EuiI18n
            default="Sort {schemaLabel}"
            token="euiColumnActions.sort"
            values={
              Object {
                "schemaLabel": <EuiI18n
                  default="A-Z"
                  token="euiColumnSortingDraggable.defaultSortAsc"
                />,
              }
            }
          >
            <Component
              schemaLabel={
                <EuiI18n
                  default="A-Z"
                  token="euiColumnSortingDraggable.defaultSortAsc"
                />
              }
            >
              Sort 
              <EuiI18n
                default="A-Z"
                key="1"
                token="euiColumnSortingDraggable.defaultSortAsc"
              >
                A-Z
              </EuiI18n>
            </Component>
          </EuiI18n>
        </span>
      </button>
    </li>
  </EuiListGroupItem>
  <EuiListGroupItem
    className=""
    color="text"
    iconType="sortDown"
    isDisabled={false}
    key="title-1"
    label={
      <EuiI18n
        default="Sort {schemaLabel}"
        token="euiColumnActions.sort"
        values={
          Object {
            "schemaLabel": <EuiI18n
              default="Z-A"
              token="euiColumnSortingDraggable.defaultSortDesc"
            />,
          }
        }
      />
    }
    onClick={[Function]}
    showToolTip={false}
    size="xs"
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--xSmall euiListGroupItem--text euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          className="euiListGroupItem__icon"
          color="inherit"
          type="sortDown"
        >
          <span
            className="euiListGroupItem__icon"
            color="inherit"
            data-euiicon-type="sortDown"
          />
        </EuiIcon>
        <span
          className="euiListGroupItem__label"
          title="Sort Z-A"
        >
          <EuiI18n
            default="Sort {schemaLabel}"
            token="euiColumnActions.sort"
            values={
              Object {
                "schemaLabel": <EuiI18n
                  default="Z-A"
                  token="euiColumnSortingDraggable.defaultSortDesc"
                />,
              }
            }
          >
            <Component
              schemaLabel={
                <EuiI18n
                  default="Z-A"
                  token="euiColumnSortingDraggable.defaultSortDesc"
                />
              }
            >
              Sort 
              <EuiI18n
                default="Z-A"
                key="1"
                token="euiColumnSortingDraggable.defaultSortDesc"
              >
                Z-A
              </EuiI18n>
            </Component>
          </EuiI18n>
        </span>
      </button>
    </li>
  </EuiListGroupItem>
  <EuiListGroupItem
    key="title-2"
    label="test"
    onClick={[Function]}
    showToolTip={false}
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--medium euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiListGroupItem__label"
          title="test"
        >
          test
        </span>
      </button>
    </li>
  </EuiListGroupItem>
</ul>
`;

exports[`EuiDataGrid render column actions renders various column actions configurations 4`] = `
<ul
  className="euiListGroup euiListGroup-maxWidthDefault"
  data-test-subj="dataGridHeaderCellActionGroup-E"
>
  <EuiListGroupItem
    color="text"
    iconType="eyeClosed"
    key="title-0"
    label="1"
    onClick={[Function]}
    showToolTip={false}
    size="xs"
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--xSmall euiListGroupItem--text euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          className="euiListGroupItem__icon"
          color="inherit"
          type="eyeClosed"
        >
          <span
            className="euiListGroupItem__icon"
            color="inherit"
            data-euiicon-type="eyeClosed"
          />
        </EuiIcon>
        <span
          className="euiListGroupItem__label"
          title="1"
        >
          1
        </span>
      </button>
    </li>
  </EuiListGroupItem>
  <EuiListGroupItem
    className=""
    color="text"
    iconType="sortUp"
    isDisabled={false}
    key="title-1"
    label="2"
    onClick={[Function]}
    showToolTip={false}
    size="xs"
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--xSmall euiListGroupItem--text euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          className="euiListGroupItem__icon"
          color="inherit"
          type="sortUp"
        >
          <span
            className="euiListGroupItem__icon"
            color="inherit"
            data-euiicon-type="sortUp"
          />
        </EuiIcon>
        <span
          className="euiListGroupItem__label"
          title="2"
        >
          2
        </span>
      </button>
    </li>
  </EuiListGroupItem>
  <EuiListGroupItem
    className=""
    color="text"
    iconType="sortDown"
    isDisabled={false}
    key="title-2"
    label="3"
    onClick={[Function]}
    showToolTip={false}
    size="xs"
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--xSmall euiListGroupItem--text euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          className="euiListGroupItem__icon"
          color="inherit"
          type="sortDown"
        >
          <span
            className="euiListGroupItem__icon"
            color="inherit"
            data-euiicon-type="sortDown"
          />
        </EuiIcon>
        <span
          className="euiListGroupItem__label"
          title="3"
        >
          3
        </span>
      </button>
    </li>
  </EuiListGroupItem>
  <EuiListGroupItem
    color="text"
    iconType="sortLeft"
    isDisabled={false}
    key="title-3"
    label="4"
    onClick={[Function]}
    showToolTip={false}
    size="xs"
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--xSmall euiListGroupItem--text euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          className="euiListGroupItem__icon"
          color="inherit"
          type="sortLeft"
        >
          <span
            className="euiListGroupItem__icon"
            color="inherit"
            data-euiicon-type="sortLeft"
          />
        </EuiIcon>
        <span
          className="euiListGroupItem__label"
          title="4"
        >
          4
        </span>
      </button>
    </li>
  </EuiListGroupItem>
  <EuiListGroupItem
    color="text"
    iconType="sortRight"
    isDisabled={true}
    key="title-4"
    label="5"
    onClick={[Function]}
    showToolTip={false}
    size="xs"
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--xSmall euiListGroupItem--text euiListGroupItem-isDisabled euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <EuiIcon
          className="euiListGroupItem__icon"
          color="inherit"
          type="sortRight"
        >
          <span
            className="euiListGroupItem__icon"
            color="inherit"
            data-euiicon-type="sortRight"
          />
        </EuiIcon>
        <span
          className="euiListGroupItem__label"
          title="5"
        >
          5
        </span>
      </button>
    </li>
  </EuiListGroupItem>
  <EuiListGroupItem
    key="title-5"
    label="test"
    onClick={[Function]}
    showToolTip={false}
    wrapText={false}
  >
    <li
      className="euiListGroupItem euiListGroupItem--medium euiListGroupItem-isClickable"
    >
      <button
        className="euiListGroupItem__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiListGroupItem__label"
          title="test"
        >
          test
        </span>
      </button>
    </li>
  </EuiListGroupItem>
</ul>
`;

exports[`EuiDataGrid rendering renders additional toolbar controls 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    class="euiDataGrid__focusWrap"
    data-focus-lock-disabled="disabled"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <div
        class="euiDataGrid__controls"
        data-test-sub="dataGridControls"
      >
        <button>
          Button
        </button>
        <div
          class="euiPopover euiPopover--anchorDownLeft"
          data-test-subj="dataGridColumnSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridColumnSelectorButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonContent__icon"
                  color="inherit"
                  data-euiicon-type="listAdd"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Columns
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiPopover euiPopover--anchorDownCenter"
          data-test-subj="dataGridStyleSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridStyleSelectorButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonContent__icon"
                  color="inherit"
                  data-euiicon-type="tableDensityExpanded"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Density
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
          data-test-subj="dataGridFullScreenButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonContent__icon"
              color="inherit"
              data-euiicon-type="fullScreen"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Full screen
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiDataGrid__verticalScroll"
      >
        <div
          class="euiDataGrid__overflow"
        >
          <div
            aria-label="aria-label"
            class="euiDataGrid__content"
            data-test-subj="dataGridWrapper"
            id="generated-id"
            role="grid"
            tabindex="0"
          >
            <div
              style="width:100%;height:100%;overflow:hidden"
            >
              <div
                class="euiDataGrid__virtualized"
                style="position:relative;height:9007199254740991px;width:9007199254740991px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
              >
                <div
                  style="height:102px;width:200px"
                >
                  <div
                    class="euiDataGridHeader"
                    data-test-subj="dataGridHeader"
                    role="row"
                  >
                    <div
                      class="euiDataGridHeaderCell"
                      data-test-subj="dataGridHeaderCell-A"
                      role="columnheader"
                      style="width:100px"
                      tabindex="-1"
                    >
                      <div
                        class="euiDataGridColumnResizer"
                        data-test-subj="dataGridColumnResizer"
                        style="margin-right:0px"
                      />
                      <div
                        class="euiPopover euiPopover--anchorDownCenter"
                        offset="7"
                      >
                        <div
                          class="euiPopover__anchor euiDataGridHeaderCell__anchor"
                        >
                          <button
                            class="euiDataGridHeaderCell__button"
                          >
                            <div
                              class="euiDataGridHeaderCell__content"
                            >
                              A
                            </div>
                            <span
                              aria-label="Header actions"
                              class="euiDataGridHeaderCell__icon"
                              color="text"
                              data-euiicon-type="arrowDown"
                              data-test-subj="dataGridHeaderCellActionButton-A"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      class="euiDataGridHeaderCell"
                      data-test-subj="dataGridHeaderCell-B"
                      role="columnheader"
                      style="width:100px"
                      tabindex="-1"
                    >
                      <div
                        class="euiDataGridColumnResizer"
                        data-test-subj="dataGridColumnResizer"
                        style="margin-right:0px"
                      />
                      <div
                        class="euiPopover euiPopover--anchorDownCenter"
                        offset="7"
                      >
                        <div
                          class="euiPopover__anchor euiDataGridHeaderCell__anchor"
                        >
                          <button
                            class="euiDataGridHeaderCell__button"
                          >
                            <div
                              class="euiDataGridHeaderCell__content"
                            >
                              B
                            </div>
                            <span
                              aria-label="Header actions"
                              class="euiDataGridHeaderCell__icon"
                              color="text"
                              data-euiicon-type="arrowDown"
                              data-test-subj="dataGridHeaderCellActionButton-B"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:0;top:0px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          0, A
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 1; Column: 1
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:100px;top:0px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          0, B
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 1; Column: 2
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--stripe euiDataGridRowCell--firstColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:0;top:34px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          1, A
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 2; Column: 1
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--stripe euiDataGridRowCell--lastColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:100px;top:34px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          1, B
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 2; Column: 2
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:0;top:68px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          2, A
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 3; Column: 1
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:100px;top:68px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          2, B
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 3; Column: 2
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        hidden=""
        id="generated-id"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;

exports[`EuiDataGrid rendering renders control columns 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    class="euiDataGrid__focusWrap"
    data-focus-lock-disabled="disabled"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <div
        class="euiDataGrid__controls"
        data-test-sub="dataGridControls"
      >
        <button>
          Button
        </button>
        <div
          class="euiPopover euiPopover--anchorDownLeft"
          data-test-subj="dataGridColumnSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridColumnSelectorButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonContent__icon"
                  color="inherit"
                  data-euiicon-type="listAdd"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Columns
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiPopover euiPopover--anchorDownCenter"
          data-test-subj="dataGridStyleSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridStyleSelectorButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonContent__icon"
                  color="inherit"
                  data-euiicon-type="tableDensityExpanded"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Density
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
          data-test-subj="dataGridFullScreenButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonContent__icon"
              color="inherit"
              data-euiicon-type="fullScreen"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Full screen
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiDataGrid__verticalScroll"
      >
        <div
          class="euiDataGrid__overflow"
        >
          <div
            aria-label="aria-label"
            class="euiDataGrid__content"
            data-test-subj="dataGridWrapper"
            id="generated-id"
            role="grid"
            tabindex="0"
          >
            <div
              style="width:100%;height:100%;overflow:hidden"
            >
              <div
                class="euiDataGrid__virtualized"
                style="position:relative;height:9007199254740991px;width:9007199254740991px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
              >
                <div
                  style="height:102px;width:300px"
                >
                  <div
                    class="euiDataGridHeader"
                    data-test-subj="dataGridHeader"
                    role="row"
                  >
                    <div
                      class="euiDataGridHeaderCell euiDataGridHeaderCell--controlColumn"
                      data-test-subj="dataGridHeaderCell-leading"
                      role="columnheader"
                      style="width:50px"
                      tabindex="-1"
                    >
                      <div
                        class="euiDataGridHeaderCell__content"
                      >
                        <span>
                          leading heading
                        </span>
                      </div>
                    </div>
                    <div
                      class="euiDataGridHeaderCell"
                      data-test-subj="dataGridHeaderCell-A"
                      role="columnheader"
                      style="width:100px"
                      tabindex="-1"
                    >
                      <div
                        class="euiDataGridColumnResizer"
                        data-test-subj="dataGridColumnResizer"
                        style="margin-right:0px"
                      />
                      <div
                        class="euiPopover euiPopover--anchorDownCenter"
                        offset="7"
                      >
                        <div
                          class="euiPopover__anchor euiDataGridHeaderCell__anchor"
                        >
                          <button
                            class="euiDataGridHeaderCell__button"
                          >
                            <div
                              class="euiDataGridHeaderCell__content"
                            >
                              A
                            </div>
                            <span
                              aria-label="Header actions"
                              class="euiDataGridHeaderCell__icon"
                              color="text"
                              data-euiicon-type="arrowDown"
                              data-test-subj="dataGridHeaderCellActionButton-A"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      class="euiDataGridHeaderCell"
                      data-test-subj="dataGridHeaderCell-B"
                      role="columnheader"
                      style="width:100px"
                      tabindex="-1"
                    >
                      <div
                        class="euiDataGridColumnResizer"
                        data-test-subj="dataGridColumnResizer"
                        style="margin-right:0px"
                      />
                      <div
                        class="euiPopover euiPopover--anchorDownCenter"
                        offset="7"
                      >
                        <div
                          class="euiPopover__anchor euiDataGridHeaderCell__anchor"
                        >
                          <button
                            class="euiDataGridHeaderCell__button"
                          >
                            <div
                              class="euiDataGridHeaderCell__content"
                            >
                              B
                            </div>
                            <span
                              aria-label="Header actions"
                              class="euiDataGridHeaderCell__icon"
                              color="text"
                              data-euiicon-type="arrowDown"
                              data-test-subj="dataGridHeaderCellActionButton-B"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      class="euiDataGridHeaderCell euiDataGridHeaderCell--controlColumn"
                      data-test-subj="dataGridHeaderCell-trailing"
                      role="columnheader"
                      style="width:50px"
                      tabindex="-1"
                    >
                      <div
                        class="euiDataGridHeaderCell__content"
                      >
                        <span>
                          trailing heading
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--firstColumn euiDataGridRowCell--controlColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:0;top:0px;height:34px;width:50px"
                    tabindex="-1"
                  >
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                    <div
                      data-focus-lock-disabled="disabled"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <div
                            class="euiDataGridRowCell__truncate"
                            data-datagrid-cellcontent="true"
                          >
                            0
                          </div>
                          <p
                            class="euiScreenReaderOnly"
                          >
                            Row: 1; Column: 1
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                  </div>
                  <div
                    class="euiDataGridRowCell"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:50px;top:0px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          0, A
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 1; Column: 2
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:150px;top:0px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          0, B
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 1; Column: 3
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--lastColumn euiDataGridRowCell--controlColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:250px;top:0px;height:34px;width:50px"
                    tabindex="-1"
                  >
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                    <div
                      data-focus-lock-disabled="disabled"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <div
                            class="euiDataGridRowCell__truncate"
                            data-datagrid-cellcontent="true"
                          >
                            0
                          </div>
                          <p
                            class="euiScreenReaderOnly"
                          >
                            Row: 1; Column: 4
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--stripe euiDataGridRowCell--firstColumn euiDataGridRowCell--controlColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:0;top:34px;height:34px;width:50px"
                    tabindex="-1"
                  >
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                    <div
                      data-focus-lock-disabled="disabled"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <div
                            class="euiDataGridRowCell__truncate"
                            data-datagrid-cellcontent="true"
                          >
                            1
                          </div>
                          <p
                            class="euiScreenReaderOnly"
                          >
                            Row: 2; Column: 1
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--stripe"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:50px;top:34px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          1, A
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 2; Column: 2
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--stripe"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:150px;top:34px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          1, B
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 2; Column: 3
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--stripe euiDataGridRowCell--lastColumn euiDataGridRowCell--controlColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:250px;top:34px;height:34px;width:50px"
                    tabindex="-1"
                  >
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                    <div
                      data-focus-lock-disabled="disabled"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <div
                            class="euiDataGridRowCell__truncate"
                            data-datagrid-cellcontent="true"
                          >
                            1
                          </div>
                          <p
                            class="euiScreenReaderOnly"
                          >
                            Row: 2; Column: 4
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--firstColumn euiDataGridRowCell--controlColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:0;top:68px;height:34px;width:50px"
                    tabindex="-1"
                  >
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                    <div
                      data-focus-lock-disabled="disabled"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <div
                            class="euiDataGridRowCell__truncate"
                            data-datagrid-cellcontent="true"
                          >
                            2
                          </div>
                          <p
                            class="euiScreenReaderOnly"
                          >
                            Row: 3; Column: 1
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                  </div>
                  <div
                    class="euiDataGridRowCell"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:50px;top:68px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          2, A
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 3; Column: 2
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:150px;top:68px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          2, B
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 3; Column: 3
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--lastColumn euiDataGridRowCell--controlColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:250px;top:68px;height:34px;width:50px"
                    tabindex="-1"
                  >
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                    <div
                      data-focus-lock-disabled="disabled"
                    >
                      <div
                        class="euiDataGridRowCell__expandFlex"
                      >
                        <div
                          class="euiDataGridRowCell__expandContent"
                        >
                          <div
                            class="euiDataGridRowCell__truncate"
                            data-datagrid-cellcontent="true"
                          >
                            2
                          </div>
                          <p
                            class="euiScreenReaderOnly"
                          >
                            Row: 3; Column: 4
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      data-focus-guard="true"
                      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                      tabindex="-1"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        hidden=""
        id="generated-id"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;

exports[`EuiDataGrid rendering renders custom column headers 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    class="euiDataGrid__focusWrap"
    data-focus-lock-disabled="disabled"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <div
        class="euiDataGrid__controls"
        data-test-sub="dataGridControls"
      >
        <div
          class="euiPopover euiPopover--anchorDownLeft"
          data-test-subj="dataGridColumnSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridColumnSelectorButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonContent__icon"
                  color="inherit"
                  data-euiicon-type="listAdd"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Columns
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiPopover euiPopover--anchorDownCenter"
          data-test-subj="dataGridStyleSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridStyleSelectorButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonContent__icon"
                  color="inherit"
                  data-euiicon-type="tableDensityExpanded"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Density
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
          data-test-subj="dataGridFullScreenButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonContent__icon"
              color="inherit"
              data-euiicon-type="fullScreen"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Full screen
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiDataGrid__verticalScroll"
      >
        <div
          class="euiDataGrid__overflow"
        >
          <div
            aria-label="aria-label"
            class="euiDataGrid__content"
            data-test-subj="dataGridWrapper"
            id="generated-id"
            role="grid"
            tabindex="0"
          >
            <div
              style="width:100%;height:100%;overflow:hidden"
            >
              <div
                class="euiDataGrid__virtualized"
                style="position:relative;height:9007199254740991px;width:9007199254740991px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
              >
                <div
                  style="height:102px;width:200px"
                >
                  <div
                    class="euiDataGridHeader"
                    data-test-subj="dataGridHeader"
                    role="row"
                  >
                    <div
                      class="euiDataGridHeaderCell"
                      data-test-subj="dataGridHeaderCell-A"
                      role="columnheader"
                      style="width:100px"
                      tabindex="-1"
                    >
                      <div
                        class="euiDataGridColumnResizer"
                        data-test-subj="dataGridColumnResizer"
                        style="margin-right:0px"
                      />
                      <div
                        class="euiPopover euiPopover--anchorDownCenter"
                        offset="7"
                      >
                        <div
                          class="euiPopover__anchor euiDataGridHeaderCell__anchor"
                        >
                          <button
                            class="euiDataGridHeaderCell__button"
                          >
                            <div
                              class="euiDataGridHeaderCell__content"
                            >
                              Column A
                            </div>
                            <span
                              aria-label="Header actions"
                              class="euiDataGridHeaderCell__icon"
                              color="text"
                              data-euiicon-type="arrowDown"
                              data-test-subj="dataGridHeaderCellActionButton-A"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      class="euiDataGridHeaderCell"
                      data-test-subj="dataGridHeaderCell-B"
                      role="columnheader"
                      style="width:100px"
                      tabindex="-1"
                    >
                      <div
                        class="euiDataGridColumnResizer"
                        data-test-subj="dataGridColumnResizer"
                        style="margin-right:0px"
                      />
                      <div
                        class="euiPopover euiPopover--anchorDownCenter"
                        offset="7"
                      >
                        <div
                          class="euiPopover__anchor euiDataGridHeaderCell__anchor"
                        >
                          <button
                            class="euiDataGridHeaderCell__button"
                          >
                            <div
                              class="euiDataGridHeaderCell__content"
                            >
                              <div>
                                More Elements
                              </div>
                            </div>
                            <span
                              aria-label="Header actions"
                              class="euiDataGridHeaderCell__icon"
                              color="text"
                              data-euiicon-type="arrowDown"
                              data-test-subj="dataGridHeaderCellActionButton-B"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:0;top:0px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          0, A
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 1; Column: 1
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:100px;top:0px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          0, B
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 1; Column: 2
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--stripe euiDataGridRowCell--firstColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:0;top:34px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          1, A
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 2; Column: 1
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--stripe euiDataGridRowCell--lastColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:100px;top:34px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          1, B
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 2; Column: 2
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:0;top:68px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          2, A
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 3; Column: 1
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:100px;top:68px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          2, B
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 3; Column: 2
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        hidden=""
        id="generated-id"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;

exports[`EuiDataGrid rendering renders with common and div attributes 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    class="euiDataGrid__focusWrap"
    data-focus-lock-disabled="disabled"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <div
        class="euiDataGrid__controls"
        data-test-sub="dataGridControls"
      >
        <div
          class="euiPopover euiPopover--anchorDownLeft"
          data-test-subj="dataGridColumnSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridColumnSelectorButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonContent__icon"
                  color="inherit"
                  data-euiicon-type="listAdd"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Columns
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiPopover euiPopover--anchorDownCenter"
          data-test-subj="dataGridStyleSelectorPopover"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
              data-test-subj="dataGridStyleSelectorButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonContent__icon"
                  color="inherit"
                  data-euiicon-type="tableDensityExpanded"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Density
                </span>
              </span>
            </button>
          </div>
        </div>
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiDataGrid__controlBtn"
          data-test-subj="dataGridFullScreenButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonContent__icon"
              color="inherit"
              data-euiicon-type="fullScreen"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Full screen
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiDataGrid__verticalScroll"
      >
        <div
          class="euiDataGrid__overflow"
        >
          <div
            aria-label="aria-label"
            class="euiDataGrid__content"
            data-test-subj="dataGridWrapper"
            id="generated-id"
            role="grid"
            tabindex="0"
          >
            <div
              style="width:100%;height:100%;overflow:hidden"
            >
              <div
                class="euiDataGrid__virtualized"
                style="position:relative;height:9007199254740991px;width:9007199254740991px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
              >
                <div
                  style="height:102px;width:200px"
                >
                  <div
                    class="euiDataGridHeader"
                    data-test-subj="dataGridHeader"
                    role="row"
                  >
                    <div
                      class="euiDataGridHeaderCell"
                      data-test-subj="dataGridHeaderCell-A"
                      role="columnheader"
                      style="width:100px"
                      tabindex="-1"
                    >
                      <div
                        class="euiDataGridColumnResizer"
                        data-test-subj="dataGridColumnResizer"
                        style="margin-right:0px"
                      />
                      <div
                        class="euiPopover euiPopover--anchorDownCenter"
                        offset="7"
                      >
                        <div
                          class="euiPopover__anchor euiDataGridHeaderCell__anchor"
                        >
                          <button
                            class="euiDataGridHeaderCell__button"
                          >
                            <div
                              class="euiDataGridHeaderCell__content"
                            >
                              A
                            </div>
                            <span
                              aria-label="Header actions"
                              class="euiDataGridHeaderCell__icon"
                              color="text"
                              data-euiicon-type="arrowDown"
                              data-test-subj="dataGridHeaderCellActionButton-A"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      class="euiDataGridHeaderCell"
                      data-test-subj="dataGridHeaderCell-B"
                      role="columnheader"
                      style="width:100px"
                      tabindex="-1"
                    >
                      <div
                        class="euiDataGridColumnResizer"
                        data-test-subj="dataGridColumnResizer"
                        style="margin-right:0px"
                      />
                      <div
                        class="euiPopover euiPopover--anchorDownCenter"
                        offset="7"
                      >
                        <div
                          class="euiPopover__anchor euiDataGridHeaderCell__anchor"
                        >
                          <button
                            class="euiDataGridHeaderCell__button"
                          >
                            <div
                              class="euiDataGridHeaderCell__content"
                            >
                              B
                            </div>
                            <span
                              aria-label="Header actions"
                              class="euiDataGridHeaderCell__icon"
                              color="text"
                              data-euiicon-type="arrowDown"
                              data-test-subj="dataGridHeaderCellActionButton-B"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:0;top:0px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          0, A
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 1; Column: 1
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:100px;top:0px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          0, B
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 1; Column: 2
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--stripe euiDataGridRowCell--firstColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:0;top:34px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          1, A
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 2; Column: 1
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--stripe euiDataGridRowCell--lastColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:100px;top:34px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          1, B
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 2; Column: 2
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:0;top:68px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          2, A
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 3; Column: 1
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
                    data-test-subj="dataGridRowCell"
                    role="gridcell"
                    style="position:absolute;left:100px;top:68px;height:34px;width:100px"
                    tabindex="-1"
                  >
                    <div
                      class="euiDataGridRowCell__expandFlex"
                    >
                      <div
                        class="euiDataGridRowCell__expandContent"
                      >
                        <div
                          class="euiDataGridRowCell__truncate"
                          data-datagrid-cellcontent="true"
                        >
                          2, B
                        </div>
                        <p
                          class="euiScreenReaderOnly"
                        >
                          Row: 3; Column: 2
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        hidden=""
        id="generated-id"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;
